# rustpython-complexintegration

./: .gitignore  Cargo.toml  README.md
plugins/: parse_intojson.py  process_testcompute.py  process_wordcount.py
src/: main.rs
src/model/: mod.rs
src/plugin_handlers/: mod.rs  python_handler.rs
