[package]
name = "rustpython-mp-testing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.14", features = ["serde", "auto-initialize"] }
pythonize = "0.14.0"
actix-web = "3.3"
clap = "2.33.3"
serde = "1.0.130"
serde_json = "1.0.68"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
env_logger = "0.9.0"
regex = "1.5"
lazy_static = "1.4.0"
#anyhow = "1.0.44"